playground/while/parser/while_parser.go
// Generated from while.g4 by ANTLR 4.6.

package parser // while

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa


var deserializer = antlr.NewATNDeserializer(nil)

var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'*'", "'/'", "'+'", "'-'", "'<'", "'>'", "'=='", "'!='", "'skip'",
	"';'", "':='", "'if'", "'then'", "'{'", "'}'", "'else'", "'while'", "'do'",
}

var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "ID", "INT", "BOOL", "WS", "COMMENT",
}

var ruleNames = []string{
	"prog", "aexp", "bexp", "cexp",
}

type whileParser struct {
	*antlr.BaseParser
}

func NewwhileParser(input antlr.TokenStream) *whileParser {
	var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	var sharedContextCache = antlr.NewPredictionContextCache()

	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}

	this := new(whileParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, sharedContextCache)
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "while.g4"

	return this
}

// whileParser tokens.
const (
	whileParserEOF     = antlr.TokenEOF
	whileParserT__0    = 1
	whileParserT__1    = 2
	whileParserT__2    = 3
	whileParserT__3    = 4
	whileParserT__4    = 5
	whileParserT__5    = 6
	whileParserT__6    = 7
	whileParserT__7    = 8
	whileParserT__8    = 9
	whileParserT__9    = 10
	whileParserT__10   = 11
	whileParserT__11   = 12
	whileParserT__12   = 13
	whileParserT__13   = 14
	whileParserT__14   = 15
	whileParserT__15   = 16
	whileParserT__16   = 17
	whileParserT__17   = 18
	whileParserID      = 19
	whileParserINT     = 20
	whileParserBOOL    = 21
	whileParserWS      = 22
	whileParserCOMMENT = 23
)

// whileParser rules.
const (
	whileParserRULE_prog = 0
	whileParserRULE_aexp = 1
	whileParserRULE_bexp = 2
	whileParserRULE_cexp = 3
)

// IProgContext is an interface to support dynamic dispatch.
type IProgContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgContext differentiates from other interfaces.
	IsProgContext()
}

type ProgContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgContext() *ProgContext {
	var p = new(ProgContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = whileParserRULE_prog
	return p
}

func (*ProgContext) IsProgContext() {}

func NewProgContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgContext {
	var p = new(ProgContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = whileParserRULE_prog

	return p
}

func (s *ProgContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgContext) AllCexp() []ICexpContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ICexpContext)(nil)).Elem())
	var tst = make([]ICexpContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ICexpContext)
		}
	}

	return tst
}

func (s *ProgContext) Cexp(i int) ICexpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICexpContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ICexpContext)
}

func (s *ProgContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.EnterProg(s)
	}
}

func (s *ProgContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.ExitProg(s)
	}
}

func (p *whileParser) Prog() (localctx IProgContext) {
	localctx = NewProgContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, whileParserRULE_prog)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(9)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<whileParserT__8)|(1<<whileParserT__11)|(1<<whileParserT__16)|(1<<whileParserID))) != 0) {
		{
			p.SetState(8)
			p.Cexp()
		}

		p.SetState(11)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IAexpContext is an interface to support dynamic dispatch.
type IAexpContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAexpContext differentiates from other interfaces.
	IsAexpContext()
}

type AexpContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAexpContext() *AexpContext {
	var p = new(AexpContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = whileParserRULE_aexp
	return p
}

func (*AexpContext) IsAexpContext() {}

func NewAexpContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AexpContext {
	var p = new(AexpContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = whileParserRULE_aexp

	return p
}

func (s *AexpContext) GetParser() antlr.Parser { return s.parser }

func (s *AexpContext) CopyFrom(ctx *AexpContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *AexpContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AexpContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type DivContext struct {
	*AexpContext
}

func NewDivContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *DivContext {
	var p = new(DivContext)

	p.AexpContext = NewEmptyAexpContext()
	p.parser = parser
	p.CopyFrom(ctx.(*AexpContext))

	return p
}

func (s *DivContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DivContext) AllAexp() []IAexpContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAexpContext)(nil)).Elem())
	var tst = make([]IAexpContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAexpContext)
		}
	}

	return tst
}

func (s *DivContext) Aexp(i int) IAexpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAexpContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAexpContext)
}

func (s *DivContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.EnterDiv(s)
	}
}

func (s *DivContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.ExitDiv(s)
	}
}

type SubContext struct {
	*AexpContext
}

func NewSubContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *SubContext {
	var p = new(SubContext)

	p.AexpContext = NewEmptyAexpContext()
	p.parser = parser
	p.CopyFrom(ctx.(*AexpContext))

	return p
}

func (s *SubContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SubContext) AllAexp() []IAexpContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAexpContext)(nil)).Elem())
	var tst = make([]IAexpContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAexpContext)
		}
	}

	return tst
}

func (s *SubContext) Aexp(i int) IAexpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAexpContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAexpContext)
}

func (s *SubContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.EnterSub(s)
	}
}

func (s *SubContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.ExitSub(s)
	}
}

type MulContext struct {
	*AexpContext
}

func NewMulContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *MulContext {
	var p = new(MulContext)

	p.AexpContext = NewEmptyAexpContext()
	p.parser = parser
	p.CopyFrom(ctx.(*AexpContext))

	return p
}

func (s *MulContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MulContext) AllAexp() []IAexpContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAexpContext)(nil)).Elem())
	var tst = make([]IAexpContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAexpContext)
		}
	}

	return tst
}

func (s *MulContext) Aexp(i int) IAexpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAexpContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAexpContext)
}

func (s *MulContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.EnterMul(s)
	}
}

func (s *MulContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.ExitMul(s)
	}
}

type VarContext struct {
	*AexpContext
}

func NewVarContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *VarContext {
	var p = new(VarContext)

	p.AexpContext = NewEmptyAexpContext()
	p.parser = parser
	p.CopyFrom(ctx.(*AexpContext))

	return p
}

func (s *VarContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VarContext) ID() antlr.TerminalNode {
	return s.GetToken(whileParserID, 0)
}

func (s *VarContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.EnterVar(s)
	}
}

func (s *VarContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.ExitVar(s)
	}
}

type NumContext struct {
	*AexpContext
}

func NewNumContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *NumContext {
	var p = new(NumContext)

	p.AexpContext = NewEmptyAexpContext()
	p.parser = parser
	p.CopyFrom(ctx.(*AexpContext))

	return p
}

func (s *NumContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NumContext) INT() antlr.TerminalNode {
	return s.GetToken(whileParserINT, 0)
}

func (s *NumContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.EnterNum(s)
	}
}

func (s *NumContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.ExitNum(s)
	}
}

type SumContext struct {
	*AexpContext
}

func NewSumContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *SumContext {
	var p = new(SumContext)

	p.AexpContext = NewEmptyAexpContext()
	p.parser = parser
	p.CopyFrom(ctx.(*AexpContext))

	return p
}

func (s *SumContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SumContext) AllAexp() []IAexpContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAexpContext)(nil)).Elem())
	var tst = make([]IAexpContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAexpContext)
		}
	}

	return tst
}

func (s *SumContext) Aexp(i int) IAexpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAexpContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAexpContext)
}

func (s *SumContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.EnterSum(s)
	}
}

func (s *SumContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.ExitSum(s)
	}
}

func (p *whileParser) Aexp() (localctx IAexpContext) {
	return p.aexp(0)
}

func (p *whileParser) aexp(_p int) (localctx IAexpContext) {
	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewAexpContext(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IAexpContext = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 2
	p.EnterRecursionRule(localctx, 2, whileParserRULE_aexp, _p)

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(16)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case whileParserINT:
		localctx = NewNumContext(p, localctx)
		p.SetParserRuleContext(localctx)
		_prevctx = localctx

		{
			p.SetState(14)
			p.Match(whileParserINT)
		}

	case whileParserID:
		localctx = NewVarContext(p, localctx)
		p.SetParserRuleContext(localctx)
		_prevctx = localctx
		{
			p.SetState(15)
			p.Match(whileParserID)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}
	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(32)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			p.SetState(30)
			p.GetErrorHandler().Sync(p)
			switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
			case 1:
				localctx = NewMulContext(p, NewAexpContext(p, _parentctx, _parentState))
				p.PushNewRecursionContext(localctx, _startState, whileParserRULE_aexp)
				p.SetState(18)

				if !(p.Precpred(p.GetParserRuleContext(), 6)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 6)", ""))
				}
				{
					p.SetState(19)
					p.Match(whileParserT__0)
				}
				{
					p.SetState(20)
					p.aexp(7)
				}

			case 2:
				localctx = NewDivContext(p, NewAexpContext(p, _parentctx, _parentState))
				p.PushNewRecursionContext(localctx, _startState, whileParserRULE_aexp)
				p.SetState(21)

				if !(p.Precpred(p.GetParserRuleContext(), 5)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 5)", ""))
				}
				{
					p.SetState(22)
					p.Match(whileParserT__1)
				}
				{
					p.SetState(23)
					p.aexp(6)
				}

			case 3:
				localctx = NewSumContext(p, NewAexpContext(p, _parentctx, _parentState))
				p.PushNewRecursionContext(localctx, _startState, whileParserRULE_aexp)
				p.SetState(24)

				if !(p.Precpred(p.GetParserRuleContext(), 4)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 4)", ""))
				}
				{
					p.SetState(25)
					p.Match(whileParserT__2)
				}
				{
					p.SetState(26)
					p.aexp(5)
				}

			case 4:
				localctx = NewSubContext(p, NewAexpContext(p, _parentctx, _parentState))
				p.PushNewRecursionContext(localctx, _startState, whileParserRULE_aexp)
				p.SetState(27)

				if !(p.Precpred(p.GetParserRuleContext(), 3)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 3)", ""))
				}
				{
					p.SetState(28)
					p.Match(whileParserT__3)
				}
				{
					p.SetState(29)
					p.aexp(4)
				}

			}

		}
		p.SetState(34)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext())
	}

	return localctx
}

// IBexpContext is an interface to support dynamic dispatch.
type IBexpContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBexpContext differentiates from other interfaces.
	IsBexpContext()
}

type BexpContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBexpContext() *BexpContext {
	var p = new(BexpContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = whileParserRULE_bexp
	return p
}

func (*BexpContext) IsBexpContext() {}

func NewBexpContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BexpContext {
	var p = new(BexpContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = whileParserRULE_bexp

	return p
}

func (s *BexpContext) GetParser() antlr.Parser { return s.parser }

func (s *BexpContext) CopyFrom(ctx *BexpContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *BexpContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BexpContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type BoolContext struct {
	*BexpContext
}

func NewBoolContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *BoolContext {
	var p = new(BoolContext)

	p.BexpContext = NewEmptyBexpContext()
	p.parser = parser
	p.CopyFrom(ctx.(*BexpContext))

	return p
}

func (s *BoolContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BoolContext) BOOL() antlr.TerminalNode {
	return s.GetToken(whileParserBOOL, 0)
}

func (s *BoolContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.EnterBool(s)
	}
}

func (s *BoolContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.ExitBool(s)
	}
}

type LesContext struct {
	*BexpContext
}

func NewLesContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *LesContext {
	var p = new(LesContext)

	p.BexpContext = NewEmptyBexpContext()
	p.parser = parser
	p.CopyFrom(ctx.(*BexpContext))

	return p
}

func (s *LesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LesContext) AllAexp() []IAexpContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAexpContext)(nil)).Elem())
	var tst = make([]IAexpContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAexpContext)
		}
	}

	return tst
}

func (s *LesContext) Aexp(i int) IAexpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAexpContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAexpContext)
}

func (s *LesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.EnterLes(s)
	}
}

func (s *LesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.ExitLes(s)
	}
}

type NeqContext struct {
	*BexpContext
}

func NewNeqContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *NeqContext {
	var p = new(NeqContext)

	p.BexpContext = NewEmptyBexpContext()
	p.parser = parser
	p.CopyFrom(ctx.(*BexpContext))

	return p
}

func (s *NeqContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NeqContext) AllAexp() []IAexpContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAexpContext)(nil)).Elem())
	var tst = make([]IAexpContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAexpContext)
		}
	}

	return tst
}

func (s *NeqContext) Aexp(i int) IAexpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAexpContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAexpContext)
}

func (s *NeqContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.EnterNeq(s)
	}
}

func (s *NeqContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.ExitNeq(s)
	}
}

type EqContext struct {
	*BexpContext
}

func NewEqContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *EqContext {
	var p = new(EqContext)

	p.BexpContext = NewEmptyBexpContext()
	p.parser = parser
	p.CopyFrom(ctx.(*BexpContext))

	return p
}

func (s *EqContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EqContext) AllAexp() []IAexpContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAexpContext)(nil)).Elem())
	var tst = make([]IAexpContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAexpContext)
		}
	}

	return tst
}

func (s *EqContext) Aexp(i int) IAexpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAexpContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAexpContext)
}

func (s *EqContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.EnterEq(s)
	}
}

func (s *EqContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.ExitEq(s)
	}
}

type GtContext struct {
	*BexpContext
}

func NewGtContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *GtContext {
	var p = new(GtContext)

	p.BexpContext = NewEmptyBexpContext()
	p.parser = parser
	p.CopyFrom(ctx.(*BexpContext))

	return p
}

func (s *GtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GtContext) AllAexp() []IAexpContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAexpContext)(nil)).Elem())
	var tst = make([]IAexpContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAexpContext)
		}
	}

	return tst
}

func (s *GtContext) Aexp(i int) IAexpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAexpContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAexpContext)
}

func (s *GtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.EnterGt(s)
	}
}

func (s *GtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.ExitGt(s)
	}
}

func (p *whileParser) Bexp() (localctx IBexpContext) {
	localctx = NewBexpContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, whileParserRULE_bexp)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(52)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext()) {
	case 1:
		localctx = NewLesContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(35)
			p.aexp(0)
		}
		{
			p.SetState(36)
			p.Match(whileParserT__4)
		}
		{
			p.SetState(37)
			p.aexp(0)
		}

	case 2:
		localctx = NewGtContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(39)
			p.aexp(0)
		}
		{
			p.SetState(40)
			p.Match(whileParserT__5)
		}
		{
			p.SetState(41)
			p.aexp(0)
		}

	case 3:
		localctx = NewEqContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(43)
			p.aexp(0)
		}
		{
			p.SetState(44)
			p.Match(whileParserT__6)
		}
		{
			p.SetState(45)
			p.aexp(0)
		}

	case 4:
		localctx = NewNeqContext(p, localctx)
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(47)
			p.aexp(0)
		}
		{
			p.SetState(48)
			p.Match(whileParserT__7)
		}
		{
			p.SetState(49)
			p.aexp(0)
		}

	case 5:
		localctx = NewBoolContext(p, localctx)
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(51)
			p.Match(whileParserBOOL)
		}

	}

	return localctx
}

// ICexpContext is an interface to support dynamic dispatch.
type ICexpContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCexpContext differentiates from other interfaces.
	IsCexpContext()
}

type CexpContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCexpContext() *CexpContext {
	var p = new(CexpContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = whileParserRULE_cexp
	return p
}

func (*CexpContext) IsCexpContext() {}

func NewCexpContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CexpContext {
	var p = new(CexpContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = whileParserRULE_cexp

	return p
}

func (s *CexpContext) GetParser() antlr.Parser { return s.parser }

func (s *CexpContext) CopyFrom(ctx *CexpContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *CexpContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CexpContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type SkipContext struct {
	*CexpContext
}

func NewSkipContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *SkipContext {
	var p = new(SkipContext)

	p.CexpContext = NewEmptyCexpContext()
	p.parser = parser
	p.CopyFrom(ctx.(*CexpContext))

	return p
}

func (s *SkipContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SkipContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.EnterSkip(s)
	}
}

func (s *SkipContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.ExitSkip(s)
	}
}

type WhileContext struct {
	*CexpContext
}

func NewWhileContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *WhileContext {
	var p = new(WhileContext)

	p.CexpContext = NewEmptyCexpContext()
	p.parser = parser
	p.CopyFrom(ctx.(*CexpContext))

	return p
}

func (s *WhileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *WhileContext) Bexp() IBexpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBexpContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBexpContext)
}

func (s *WhileContext) AllCexp() []ICexpContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ICexpContext)(nil)).Elem())
	var tst = make([]ICexpContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ICexpContext)
		}
	}

	return tst
}

func (s *WhileContext) Cexp(i int) ICexpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICexpContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ICexpContext)
}

func (s *WhileContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.EnterWhile(s)
	}
}

func (s *WhileContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(whileListener); ok {
		listenerT.ExitWhile(s)
	}
}

type IfContext struct {
	*CexpContext
}

func NewIfContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *IfContext {
	var p = new(IfContext)

	p.CexpContext = NewEmptyCexpContext()
	p.parser = parser
	p.CopyFrom(ctx.(*CexpContext))

	return p
}

func (s *IfContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IfContext) Bexp() IBexpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBexpContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBexpContext)
}
